backend docker deps
