# backend-graphql/src/app.ts
@@ -1,17 +1,24 @@
 require("dotenv").config();
 
-import cors from "cors";
 import express from "express";
+import cors from "cors";
+import morgan from "morgan";
 import { createHandler } from "graphql-http/lib/use/express";
 import { schema } from "./graphql/schema";
 import { ModelFactory } from "./models";
 
 const wapp = express();
-
-wapp
-  .use(cors());
+wapp.disable("x-powered-by");
 
 const GRAPHQL_PORT = parseInt(process.env.GRAPHQL_PORT!);
+
+wapp
+  .use(cors())
+  .use(morgan("dev"));
+
+wapp.get("/healthcheck", async (_, res) => {
+  res.status(200).end();
+});
 
 wapp.all("/graphql", createHandler({
   schema: schema,
